# example-cpp

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  PRODUCT.md  README.md  VERSION
.github/: copilot-instructions.md
cmake/: GetVersionFromGitTag.cmake  arm-linux-gnueabihf-gcc.cmake  googletest-download.cmake
src/: CMakeLists.txt  config.h.in
src/asn1/: CMakeLists.txt  README.md  asn1_example.cpp  my_schema.asn  sensor_data.asn
src/fileio/: CMakeLists.txt  config.txt  config_file.cpp  fileio.cpp  mmap.cpp  printdir.cpp  stdio.cpp
src/ipc/: CMakeLists.txt  fifo_client.cpp  fifo_cliserv.cpp  fifo_server.cpp  ipc_func.cpp  ipc_func.h  mq_client.cpp  mq_server.cpp  pipe_cliserv.cpp  shm_client.cpp  shm_server.cpp
src/linux_env/: CMakeLists.txt  getopt.cpp  longopt.cpp  tmpname.cpp
src/math_func/: CMakeLists.txt  math_func.cpp  math_func.h
src/pattern/: CMakeLists.txt
src/pattern/pImpl/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
src/perf/: CMakeLists.txt  irq_test.cpp  perf_main.cpp  timer_test.cpp  toptest.cpp
src/process/: CMakeLists.txt  alarm.cpp  fork.cpp  signal.cpp  system.cpp
src/sync/: CMakeLists.txt  procon_cond.cpp  procon_mutex.cpp  sem_buff.cpp
src/tcpip/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp  tcpip_func.cpp  tcpip_func.h  udp_client.cpp  udp_connect.cpp  udp_server.cpp
src/thread/: CMakeLists.txt  thread_detach.cpp  thread_func.c  thread_func.h  thread_main.c  thread_simple.cpp
src/time/: CMakeLists.txt  mssleep.cpp  nanosleep.cpp  timestamp.cpp  usleep.cpp
src/usage/: CMakeLists.txt  Quote.cpp  Quote.h  SalesItem.cpp  SalesItem.h  hello_c.c  hello_cpp.cpp  usage_cplus.cpp  usage_cplus.h  usage_func.c  usage_func.h
test/: CMakeLists.txt  unittest_main.cpp
test/math_func/: CMakeLists.txt  math_func_test.cpp
test/thread/: CMakeLists.txt  thread_func_test.cpp
test/usage/: CMakeLists.txt  CMakeLists.txt.copy  SalesItemTest.cpp  usage_cplus_test.cpp  usage_func_test.cpp
